--- a/style-resize.css
+++ b/style-resize.css
@@ -1,14 +1,15 @@
-/**** left column ****/
+/***left***/
 #left-col {
     background-color: #2c4251;
     text-align: center;
-    padding: 7em 0;
+    padding: 4em 0;
     font-size: 1em;
     height: 100vh;
 }
 
 ul {
     list-style-type: none;
+    padding:0;
 }
 
 a {
@@ -26,14 +27,16 @@ img {
 .educ-left {
     margin-top: 1em;
 }
-/**** right column ****/
+
+/****right****/
 #right-col {
+    padding-left: 30em;
     font-size: 1em;
-    color: white;
     background-image: url(bg.JPG);
     background-size: cover;
-    padding-left: 27em;
+    color: white;
 }
+
 h1 {
     font-size: 3em;
 }
@@ -43,16 +46,16 @@ h5 {
 }
 
 h3 {
-    margin-top: 1em;
+    margin-top: 2em;
     text-align: center;
     background-color: #2c4251;
     color: white;
     margin-right: 1em;
-    font-size: 1em;
+    font-size: 2em;
 }
 p {
     background-color:black;
-    margin-right: 1em;
+    margin-right: 2em;
 }
 .col-4 {
     background-color: black;
